# personal-crm

./: .env.dev  .gitignore  README.md  docker-compose-pi.prod.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  rxconfig.py
app/: .gitignore  pcconfig.py  rxconfig.py
app/app/: app.py  base_state.py  base_style.py  utils.py
app/app/backend/: analytics.py  auth.py  crud.py  models.py
app/app/components/: action_form.py  action_form_switcher.py  add_form_switcher.py  navbar.py  person_editor.py  person_notes.py
app/app/components/fragments/: action_form_switcher.py  card_page.py  login_requirement.py  most_seen_chart.py  notes_table.py  person_details_selector.py  person_selector.py  recent_history_table.py  recent_plans_table.py  to_see_table.py
app/app/pages/: analytics.py  auth.py  home.py  index.py  person_details.py
backend/: Dockerfile  entrypoint.sh  main.py  manage.py  pyproject.toml  setup_test_db.py
backend/migrations/: env.py
backend/migrations/versions/: 115b1c79c54e_add_user_id_foreign_keys.py  4331eba14eb7_initial_migration.py  c16bb4dcc300_create_user_table.py
backend/src/: __init__.py  main.py
backend/src/sql/: crud.py  database.py  models.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Api.js  App.css  App.js  index.js  store.js  styles.js  theme.js
frontend/src/components/: Analytics.js  AppBar.js  Charts.js  CreatablePersonSelect.js  FormControlBar.js  FormController.js  Forms.js  Header.js  Home.js  Login.js  Main.js  People.js  PersonListForm.js  PersonSelect.js  Tables.js
frontend/src/components/fragments/: Charts.js  CreatablePersonSelect.js  FormControlBar.js  FormController.js  Forms.js  ModalControlBars.js  ModalControllers.js  PersonSelect.js  Tables.js
frontend/src/components/screens/: Analytics.js  Home.js  People.js
frontend/src/reducers/: authSlice.js
frontend/src/services/: auth.js  constants.js  data.js
frontend/src/themes/: theme.js
