[tool.poetry]
name = "personal-crm-app"
version = "0.1.0"
description = "FriendCRM app written in Pynecone"
authors = ["Chris Watkins <chris.watkins93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pynecone = "^0.1.20"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
