[tool.poetry]
name = "personal-crm-backend"
version = "0.1.0"
description = ""
authors = ["Chris Watkins <chris.watkins93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-RESTful = "^0.3.8"
pytz = "^2021.1"
Flask-Cors = "^3.0.10"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
SQLAlchemy = "1.3.24"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
